@@ -79,9 +79,6 @@
                 <version>3.0.0-M3</version>
                 <configuration>
                     <argLine>--enable-preview</argLine>
-                    <forkCount>3</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
         </plugins>
